--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,20 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  
+
+  button#new-message.message-button Add new message
+  
+
+  div.messages-container
+    each message in messages
+      div.message-box
+        p.user=message.user 
+        p=message.text
+        p=message.added
+      
+  
+  script(type="text/javascript").
+    document.getElementById('new-message').onclick = function() {
+      location.href = 'http://localhost:3000/new'
+    }
