Fixed redirect url

--- a/views/index.pug
+++ b/views/index.pug
@@ -18,5 +18,5 @@ block content
   
   script(type="text/javascript").
     document.getElementById('new-message').onclick = function() {
-      location.href = 'http://localhost:3000/new'
+      location.href = window.location.href + 'new'
     }
